- Fixed full screen not working - Modified transition styles to affect only backgrounds for dark mode - Added sticky to the toolbar for the textarea editor - Modified timeline segments so that if the user deletes all of the tags or non playable characters, it will remove them

--- a/webroot/css/main.less
+++ b/webroot/css/main.less
@@ -37,6 +37,7 @@
 @transitionSpeedFast: 0.07s;
 @transitionSpeedTwo:  0.15s;
 @transitionSpeedSlow: 0.3s;
+@transitionSpeedBackgroundColor: 0.2s;
 
 @widthMinMobile:  320px;
 @widthMinTablet:  768px;
@@ -63,7 +64,7 @@
     }
 
     & when (@transitionVar = @transition) {
-        transition: background-color @transitionSpeedSlow linear !important;
+        transition: background @transitionSpeedBackgroundColor ease-in-out !important;
     }
 
     &:hover when (@hoverVar = @hover) {
@@ -162,9 +163,9 @@ body {
     background-image: url('/img/bg.png');
     background-position: bottom;
     background-repeat: repeat-x;
-    background-color: rgba(250, 250, 250, 1);
     min-height: 100%;
-    transition: background-color @transitionSpeedSlow linear;
+    background-color: rgba(250, 250, 250, 1);
+    transition: background @transitionSpeedBackgroundColor ease-in-out;
 
     &.dark-mode {
         background-color: rgba(30, 30, 30, 1);
@@ -200,7 +201,7 @@ a {
     display: inline-block;
     font-weight: 600;
     padding: @distSix;
-    transition: all @transitionSpeedFast linear;
+    // transition: all @transitionSpeedFast linear;
         text-decoration: none;
 
     &:hover {
@@ -230,7 +231,7 @@ a {
     &.actions-fixed {
         position: absolute;
         right: 0;
-        transition: all @transitionSpeedFast linear;
+        transition: height @transitionSpeedFast linear;
     }
 
     &.open {
@@ -828,7 +829,7 @@ input[type=submit], input[type=button] {
         .background-border-color(rgba(255, 255, 255, 1), @transition, @noHover, @darkMode, @textColor);
         margin: 0;
         padding: @distEight;
-        transition: all @transitionSpeedFast linear;
+        // transition: all @transitionSpeedFast linear;
         width: 100%;
 
         &:focus {
@@ -846,7 +847,7 @@ input[type=submit], input[type=button] {
     .textarea-editor {
         font-size: 0;
         line-height: 0;
-        overflow: hidden;
+        // overflow: hidden;
         padding: 0;
         position: relative;
         width: 100%;
@@ -859,15 +860,16 @@ input[type=submit], input[type=button] {
         &.full-screen {
             .textarea-editor-toolbar {
                 justify-content: space-evenly;
-                left: 0;
-                position: fixed;
+                // left: 0;
+                position: sticky;
+                position: -webkit-sticky;
                 transition: unset;
                 top: 0;
                 z-index: 2;
 
-                > * {
-                    margin: @distFour 3%;
-                }
+                // > * {
+                //     margin: @distFour 3%;
+                // }
 
             }
         }
@@ -909,6 +911,7 @@ input[type=submit], input[type=button] {
             display: flex;
             flex-wrap: wrap;
             position: relative;
+            top: 0;
             width: 100%;
 
             &:after {
@@ -924,7 +927,7 @@ input[type=submit], input[type=button] {
                 position: absolute;
                 right: 0;
                 top: 100%;
-                transition: all @transitionSpeedFast linear;
+                transition: max-height @transitionSpeedFast linear;
             }
         }
 
@@ -999,7 +1002,7 @@ label {
             display: block;
             height: 1.6rem;
             position: absolute;
-            transition: all @transitionSpeedFast ease;
+            transition: transform @transitionSpeedFast ease;
             transform-origin: center;
             width: 1.6rem;
             z-index: 1;
@@ -1089,7 +1092,6 @@ p {
     .show-more-content {
         max-height: 20rem;
         overflow: hidden;
-        transition: all @transitionSpeedTwo linear;
     }
 
     .show-more-link {
@@ -1111,6 +1113,13 @@ p {
         body.dark-mode & {
             background: linear-gradient(rgba(51, 51, 51, 0) 0%, rgba(51, 51, 51, 0.9) 40%, rgba(51, 51, 51, 1) 50%);
         }
+    }
+}
+
+.sticky-element {
+    &.stuck {
+        position: fixed;
+        top: 0;
     }
 }
 
@@ -1198,7 +1207,6 @@ table {
             .background-color(rgba(235, 235, 250, 1), @transition, @noHover, @darkMode, @textColor);
 
             a {
-                display: block;
                 padding: @distTwelve;
             }
         }
@@ -1303,7 +1311,7 @@ ul {
                     top: 0.3rem;
                     transform: rotate(45deg);
                     transform-origin: center;
-                    transition: all @transitionSpeedFast linear;
+                    // transition: all @transitionSpeedFast linear;
                     width: 2.1rem;
                 }
             }
@@ -1325,7 +1333,7 @@ ul {
                 overflow: hidden;
                 padding: @distSix @distTwenty @distSix @distEight;
                 text-overflow: ellipsis;
-                transition: all @transitionSpeedFast linear;
+                // transition: all @transitionSpeedFast linear;
                 white-space: nowrap;
             }
 
@@ -1391,9 +1399,9 @@ ul {
                 }
                 .textarea-editor-toolbar {
                     justify-content: flex-start;
-                    > * {
-                        margin: 0.5rem 0.5rem;
-                    }
+                    // > * {
+                    //     margin: 0.5rem 0.5rem;
+                    // }
                 }
             }
         }
